<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.mainactivity.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mainactivity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_zoomPostFragment"
            app:destination="@id/zoomPostFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.mainactivity.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/zoomPostFragment"
        android:name="com.example.mainactivity.ui.home.ZoomPostFragment"
        android:label="ZoomPostFragment" >
        <argument android:name="post"
            app:argType="com.example.mainactivity.data.Post"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>